Fix spacing between rows in the photo grid

--- a/css/main.scss
+++ b/css/main.scss
@@ -502,7 +502,7 @@ body {
 }
 
 .picture-grid .row {
-	margin-bottom: 24px;	
+	margin-bottom: 30px;	
 }
 
 img {
